# pycharcounter

./: .gitignore  README.md  charcounter.py  pyproject.toml
